chore: 이전 코드 preTest폴더로 이동

--- a/preTest/static/한손으로 동작인식.ipynb
+++ b/preTest/static/한손으로 동작인식.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5bba6d13",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pillow in /Users/iminji/opt/anaconda3/envs/tf/lib/python3.10/site-packages (9.3.0)\n",
+      "Requirement already satisfied: pillow in /Users/jeongtaewon/opt/anaconda3/lib/python3.7/site-packages (9.3.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a1789521",
    "metadata": {},
    "outputs": [],
@@ -89,8 +89,8 @@
     "    return np.array(img_pil)\n",
     "    \n",
     "img=np.zeros((480,640,3),dtype=np.uint8)\n",
-    "FONT_SIZE=30\n",
-    "COLOR=(255,255,255) #흰색\n",
+    "FONT_SIZE=50\n",
+    "COLOR=(0,0,0) #흰색\n",
     "\n",
     "while cap.isOpened():\n",
     "    ret, img = cap.read()\n",
@@ -132,7 +132,7 @@
     "\n",
     "            # Draw gesture result\n",
     "            if idx in rps_gesture.keys():\n",
-    "                img=myPutText(img,rps_gesture[idx],(20, 50),FONT_SIZE,(255,255,255))\n",
+    "                img=myPutText(img,'인식된 지문자는 :' + rps_gesture[idx],(20, 100),FONT_SIZE,(0,0,0))\n",
     "#                 cv2.putText(img, text=rps_gesture[idx].upper(), org=(int(res.landmark[0].x * img.shape[1]), int(res.landmark[0].y * img.shape[0] + 20)), fontFace=cv2.FONT_HERSHEY_SIMPLEX,font=font, fontScale=5, color=(255, 255, 255), thickness=2)\n",
     "                \n",
     "\n",
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.7.15"
   }
  },
  "nbformat": 4,
