fix : 테스트 결과 확인 인코딩 깨짐 문제

--- a/모델생성 및 실행.ipynb
+++ b/모델생성 및 실행.ipynb
@@ -5,11 +5,28 @@
    "execution_count": null,
    "id": "11c8eee5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
     "import numpy as np\n",
+    "from PIL import ImageFont, ImageDraw, Image #cv2.puttext용함수. 실제로는 지울 것\n",
+    "\n",
+    "#한국어 인식함수 (실제 사용시 삭제)\n",
+    "def myPutText(src,text,pos,font_size,font_color):\n",
+    "    img_pil=Image.fromarray(src)\n",
+    "    draw=ImageDraw.Draw(img_pil)\n",
+    "    font=ImageFont.truetype('한국기계연구원_bold.ttf',font_size)\n",
+    "    draw.text(pos,text,font=font,fill=font_color)\n",
+    "    return np.array(img_pil)\n",
     "\n",
     "max_num_hands = 1\n",
     "\n",
@@ -21,7 +38,7 @@
     "\n",
     "\n",
     "gesture = {\n",
-    "    0:'a', 1:'b', 2:'c' , 3:'d' , 4:'e' , 5:'f'\n",
+    "    0:'ㄱ', 1:'ㄴ', 2:'ㄷ' , 3:'ㄹ' , 4:'ㅁ' , 5:'ㅂ'\n",
     "}\n",
     "\n",
     "\n",
@@ -95,28 +112,51 @@
     "\n",
     "            # Inference gesture\n",
     "            data = np.array([angle], dtype=np.float32)\n",
-    "            print(\"Data :\",data)\n",
+    "            # print(\"Data :\",data)\n",
     "            ret, results, neighbours, dist = knn.findNearest(data, 3)\n",
     "            idx = int(results[0][0])\n",
     "\n",
     "            # Draw gesture result\n",
     "            if idx in gesture.keys():\n",
     "                org = (int(res.landmark[0].x * img.shape[1]), int(res.landmark[0].y * img.shape[0]))\n",
-    "                cv2.putText(img, text=gesture[idx].upper(), org=(org[0], org[1] + 20), fontFace=cv2.FONT_HERSHEY_SIMPLEX, fontScale=1, color=(255, 255, 255), thickness=2)\n",
+    "                \n",
     "\n",
     "                rps_result.append({\n",
     "                    'rps': gesture[idx],\n",
     "                    'org': org\n",
     "                })\n",
-    "\n",
+    "               \n",
     "            mp_drawing.draw_landmarks(img, res, mp_hands.HAND_CONNECTIONS)\n",
-    "\n",
-    "\n",
-    "\n",
+    "            img=myPutText(img,gesture[idx],(int(img.shape[1]/2), 30),100,(0,255,0)) #확인용 코드 , 실사용시 삭제필요 \n",
+    "      \n",
     "    cv2.imshow('temp', img)\n",
     "    if cv2.waitKey(1) == ord('q'):\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "942845c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e633790",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4559605a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
