chore: 모델 재업로드

--- a/모델생성 및 실행.ipynb
+++ b/모델생성 및 실행.ipynb
@@ -5,15 +5,7 @@
    "execution_count": null,
    "id": "11c8eee5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
@@ -39,7 +31,8 @@
     "\n",
     "gesture = {\n",
     "    0:'ㄱ', 1:'ㄴ', 2:'ㄷ' , 3:'ㄹ' , 4:'ㅁ' , 5:'ㅂ', 6:'ㅅ', 7:'ㅇ', 8:'ㅈ', 9:'ㅊ', 10:'ㅋ', 11:'ㅌ', 12:'ㅍ',\n",
-    "    13:'ㅎ',\n",
+    "   13:'ㅎ', 14:'ㅏ', 15:'ㅑ', 16:'ㅓ', 17:'ㅕ', 18:'ㅗ', 19:'ㅛ', 20:'ㅜ', 21:'ㅠ', 22:'ㅡ', 23:'ㅣ', 24:'ㅐ', 25:'ㅒ', 26:'ㅔ', 27:'ㅖ',\n",
+    "   28:'ㅚ', 29:'ㅟ', 30:'ㅢ'\n",
     "}\n",
     "\n",
     "\n",
@@ -54,7 +47,7 @@
     "    min_tracking_confidence=0.5)\n",
     "\n",
     "# Gesture recognition model\n",
-    "file = np.genfromtxt('dataSet/confine_data.csv', delimiter=',')\n",
+    "file = np.genfromtxt('dataset/dataSet_v1.csv', delimiter=',')\n",
     "angle = file[:,:-1].astype(np.float32)\n",
     "label = file[:, -1].astype(np.float32)\n",
     "knn = cv2.ml.KNearest_create()\n",
@@ -176,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
